--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <nav>
       <a href="#about">પરિચય</a>
       <a href="#gallery">ગેલેરી</a>
-      <a href="#result">પરિણામ</a>
+      <a href="result/index.html" target="_blank">પરિણામ</a>
       <a href="#timetable">ટાઈમટેબલ</a>
       <a href="#teachers">શિક્ષકો</a>
       <a href="#contact">સંપર્ક</a>
