--- a/index.html
+++ b/index.html
@@ -2,70 +2,51 @@
 <html lang="gu">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>ખારિયા પ્રાથમિક શાળા</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
-    <img src="school-logo.png" alt="લોગો" class="logo">
+    <img src="school-logo.png" alt="શાળાનું લોગો" class="logo">
     <h1>ખારિયા પ્રાથમિક શાળા</h1>
-    <p>મુ. પીઠાઈ, તા-કઠલાલ, જી. ખેડા | DISE Code: 24160304807</p>
+    <p>મુ. પીઠાઈ, તા-કઠલાલ, જી. ખેડા | DISE: 24160304807</p>
     <nav>
       <a href="#about">પરિચય</a>
       <a href="#gallery">ગેલેરી</a>
       <a href="result/index.html" target="_blank">પરિણામ</a>
       <a href="#timetable">ટાઈમટેબલ</a>
-      <a href="#teachers">શિક્ષકો</a>
       <a href="#contact">સંપર્ક</a>
     </nav>
   </header>
 
-  <section class="hero">
-    <h2>શિક્ષણ એ સાચો વિકાસ છે</h2>
-    <p>અમે દરેક બાળકના ઉજ્જવળ ભવિષ્ય માટે પ્રતિબદ્ધ છીએ</p>
-  </section>
-
   <section id="about">
-    <h2>શાળાનો પરિચય</h2>
-    <p>ખારિયા પ્રાથમિક શાળા રાજ્ય સરકાર દ્વારા સંચાલિત શાળા છે. અહીં ધોરણ 1 થી 8 સુધીના વિદ્યાર્થીઓ માટે ગુણવત્તાપૂર્ણ શિક્ષણ આપવામાં આવે છે.</p>
+    <h2>શાળાનું પરિચય</h2>
+    <p>અમે વિદ્યાર્થીઓના સર્વાંગી વિકાસ માટે પ્રતિબદ્ધ છીએ...</p>
   </section>
 
   <section id="gallery">
-    <h2>શાળાની ગેલેરી</h2>
+    <h2>ગેલેરી</h2>
     <div class="gallery">
-      <img src="school1.jpg" alt="શાળાનો ફોટો 1">
-      <img src="school2.jpg" alt="શાળાનો ફોટો 2">
+      <img src="school1.jpg" alt="શાળાનો દૃશ્ય">
+      <img src="school2.jpg" alt="વિદ્યાર્થીઓનો ફોટો">
     </div>
   </section>
 
-  <section id="result">
-    <h2>વિદ્યાર્થીઓના પરિણામ</h2>
-    <p><a href="result_demo.pdf" target="_blank">પરિણામ અહીં જુઓ (PDF)</a></p>
-  </section>
-
   <section id="timetable">
-    <h2>શાળાનો ટાઈમટેબલ</h2>
-    <p><a href="timetable_demo.pdf" target="_blank">ટાઈમટેબલ અહીં જુઓ (PDF)</a></p>
-  </section>
-
-  <section id="teachers">
-    <h2>શાળાના શિક્ષકો</h2>
-    <ul>
-      <li>શ્રીમતી નિરુપાબેન પટેલ – ગુજરાતી</li>
-      <li>શ્રી વિનોદભાઈ પરમાર – ગણિત</li>
-      <li>શ્રીમતી કમલેશબેન રાવલ – વિજ્ઞાન</li>
-    </ul>
+    <h2>ટાઈમટેબલ</h2>
+    <p><a href="files/timetable_demo.pdf" target="_blank">PDF ડાઉનલોડ કરો</a></p>
   </section>
 
   <section id="contact">
     <h2>સંપર્ક</h2>
-    <p>સરનામું: મુ. પીઠાઈ, તા-કઠલાલ, જી. ખેડા</p>
-    <p>ફોન: 9904555198</p>
+    <ul>
+      <li>મુ. પીઠાઈ, તા-કઠલાલ, જી. ખેડા</li>
+      <li>ફોન: 9904555198</li>
+    </ul>
   </section>
 
   <footer>
-    <p>&copy; 2025 ખારિયા પ્રાથમિક શાળા</p>
+    <p>© 2025 ખારિયા પ્રાથમિક શાળા</p>
   </footer>
 </body>
 </html>
